--- a/arch/arm/configs/msm8974pro_sec_klte_dv_defconfig
+++ b/arch/arm/configs/msm8974pro_sec_klte_dv_defconfig
@@ -1,9 +1,10 @@
 # K PROJECT config
 CONFIG_ARCH_MSM8974PRO=y
 CONFIG_SEC_K_PROJECT=y
-CONFIG_MACH_KLTE_USC=y
-CONFIG_MSM_L2_ERP_PORT_PANIC=y
+CONFIG_MACH_KLTE_SPR=y
 CONFIG_MSM_ADSPRPC=y
+
+CONFIG_DEFERRED_INITCALLS=y
 
 #
 # Wifi features
@@ -32,7 +33,7 @@ CONFIG_BCM4354=y
 CONFIG_BCMDHD_FW_PATH="/system/etc/wifi/bcmdhd_sta.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/nvram_net.txt"
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
-CONFIG_WLAN_REGION_CODE=405
+CONFIG_WLAN_REGION_CODE=100
 CONFIG_MMC_MSM_SDC2_SUPPORT=y
 CONFIG_CFG80211_REG_NOT_UPDATED=y
 CONFIG_WIFI_MULTICAST_LOG=y
@@ -48,6 +49,7 @@ CONFIG_MDNIE_LITE_TUNING=y
 CONFIG_FB_MSM_MIPI_SAMSUNG_OCTA_CMD_WQHD_PT_PANEL=y
 CONFIG_FB_MSM_MDSS_DBG_SEQ_TICK=y
 CONFIG_FB_MSM_MDSS_DSI_DBG=y
+#CONFIG_LCD_HMT is not set
 #
 # Camera
 #
@@ -70,7 +72,6 @@ CONFIG_SND_SOC_ES705_SLIM=y
 CONFIG_FW_LOADER=y
 CONFIG_FIRMWARE_IN_KERNEL=y
 CONFIG_EXTRA_FIRMWARE_DIR="firmware"
-CONFIG_SND_SOC_ES704_TEMP=y
 #
 # DHA Solution
 #
@@ -84,10 +85,12 @@ CONFIG_USB_DUN_SUPPORT=y
 # CONFIG_USB_EHCI_MSM is not set
 # CONFIG_USB_EHCI_MSM_HSIC is not set
 CONFIG_USB_DWC3=y
+CONFIG_MHL_VERSION=0x21
+
 CONFIG_USB_STORAGE_DETECT=y
 CONFIG_USB_HOST_NOTIFY=y
-
 CONFIG_MHL_VERSION=0x21
+
 #
 # Enable SEC_PM Feature
 #
@@ -100,6 +103,8 @@ CONFIG_REGULATOR_MAX77804K=y
 CONFIG_W1=y
 CONFIG_W1_MASTER_GPIO_MSM=y
 CONFIG_W1_SLAVE_DS28EL15=y
+CONFIG_W1_FAST_CHECK=y
+CONFIG_W1_SN=y
 #
 # Finger print sensor
 #
@@ -132,8 +137,7 @@ CONFIG_IIO_ST_HWMON=y
 #
 # NFC
 #
-CONFIG_NFC_PN547=y
-CONFIG_NFC_PN547_PMC8974_CLK_REQ=y
+CONFIG_BCM2079X_NFC_I2C=y
 #
 # Battery & Charger
 #
@@ -171,13 +175,12 @@ CONFIG_LEDS_MAX77804K=y
 #
 # etc
 #
-# CONFIG_HID is not set
+CONFIG_HID=y
+# CONFIG_HID_OVR is not set
 #
 # BT
 #
 CONFIG_BT_BCM4354=y
-
-CONFIG_INSIDESECURE_VPNCLIENT=y
 
 #
 # extcon
@@ -191,7 +194,7 @@ CONFIG_FRONTSWAP=y
 CONFIG_ZSMALLOC_NEW=y
 CONFIG_PGTABLE_MAPPING=y
 CONFIG_ZSWAP=y
-CONFIG_DIRECT_RECLAIM_FILE_PAGES_ONLY=n
+CONFIG_DIRECT_RECLAIM_FILE_PAGES_ONLY=y
 CONFIG_INCREASE_MAXIMUM_SWAPPINESS=y
 CONFIG_FIX_INACTIVE_RATIO=y
 CONFIG_TIGHT_PGDAT_BALANCE=y
@@ -202,3 +205,8 @@ CONFIG_SWAP_ENABLE_READAHEAD=n
 # RCU
 #
 CONFIG_RCU_FAST_NO_HZ=y
+# KNOX
+#CONFIG_SDP=y
+
+#optimize mmc block delay on resume
+CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
